# fip_ranking_parser

./: README.md  pyproject.toml
src/fip_ranking_parser/: fiprank.py  helpers.py
